<resources>
    <string name="app_name">Uned Secured Software</string>

    <!-- GENERAL TEXTS -->
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="quit_message">Are you sure exit the application?</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="action_settings">Settings</string>

    <!-- SPLASH -->
    <string name="splash_title">UNED - Secure Software</string>

    <!-- LOGIN -->
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="complete_username_password">Complete username and password</string>
    <string name="username_password_incorrect">Username or password incorrect</string>
    <string name="blocked_time">Blocked time:</string>

    <!-- REGISTER -->
    <string name="repeat_password">Repeat Password</string>
    <string name="create_user">Create User</string>
    <string name="error_user_exist">User exist</string>
    <string name="error_password_different">Password different</string>
    <string name="error_register">Eror registering</string>
    <string name="form_uncomplete">Form uncomplete</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="error_age">Age must be between 5–120 years old</string>
    <string name="error_bad_email">The email is not valid</string>
    <string name="error_upper_number">Password need 1 uppercase and 1 number</string>
    <string name="error_short_password">The password is too short</string>

    <!-- CONTACTS -->
    <string name="contacts">Contacts</string>

    <!-- MEMORY ACTIVITIES -->
    <string name="activities_memory">Activities memory</string>
    <string name="activities_stack_title">This view test activities stack memory problem.</string>
    <string name="activities_stack">Activities stack</string>
    <string name="new_activity_load">Add activity stack</string>
    <string name="clear_stack">Clear activities stack</string>

    <!-- MAIN -->
    <string name="main">Principal</string>
    <string name="pref_dream_text_key">pref_dream_text</string>
    <string name="pref_dream_text_default">zzzZZZzzz</string>


</resources>
