<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/main_toolbar" layout="@layout/include_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen32"
        android:text="@string/activities_stack_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/activities_stack"/>

    <TextView
        android:id="@+id/tv_stack_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        android:textSize="50sp"
        android:gravity="center"
        android:text="1"/>

    <Button
        android:id="@+id/bt_add_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen32"
        android:layout_marginStart="@dimen/dimen32"
        android:layout_marginEnd="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen32"
        android:layout_marginTop="@dimen/dimen32"
        android:text="@string/new_activity_load"/>

    <Button
        android:id="@+id/bt_clear_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen32"
        android:layout_marginStart="@dimen/dimen32"
        android:layout_marginEnd="@dimen/dimen32"
        android:layout_marginRight="@dimen/dimen32"
        android:layout_marginTop="@dimen/dimen8"
        android:text="@string/clear_stack"/>

</LinearLayout>