<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/main_toolbar" layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen32">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:scrollbars="vertical"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:scrollbars="vertical" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                android:textColor="@color/color_error"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                android:clickable="true"
                android:focusable="true"
                android:longClickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:textSize="17sp"
                android:padding="@dimen/dimen8"
                android:text="@string/register"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>